deep model high res done training

--- a/cnn_Deep_Models.ipynb
+++ b/cnn_Deep_Models.ipynb
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1505,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1523,25 +1523,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 125912 files belonging to 18 classes.\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "Found 125912 files belonging to 18 classes.\n",
+      "Using 88128 samples in the High Training set High Resolution\n",
+      "Using 25184 samples in the High Validation set High Resolution\n",
+      "Using 12600 samples in the High Test set High Resolution\n"
      ]
     }
    ],
@@ -1600,7 +1592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1613,9 +1605,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_1\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " rescaling (Rescaling)       (None, 128, 128, 3)       0         \n",
+      "                                                                 \n",
+      " conv2d (Conv2D)             (None, 128, 128, 16)      448       \n",
+      "                                                                 \n",
+      " batch_normalization (BatchN  (None, 128, 128, 16)     64        \n",
+      " ormalization)                                                   \n",
+      "                                                                 \n",
+      " max_pooling2d (MaxPooling2D  (None, 64, 64, 16)       0         \n",
+      " )                                                               \n",
+      "                                                                 \n",
+      " dropout (Dropout)           (None, 64, 64, 16)        0         \n",
+      "                                                                 \n",
+      " conv2d_1 (Conv2D)           (None, 64, 64, 32)        4640      \n",
+      "                                                                 \n",
+      " batch_normalization_1 (Batc  (None, 64, 64, 32)       128       \n",
+      " hNormalization)                                                 \n",
+      "                                                                 \n",
+      " max_pooling2d_1 (MaxPooling  (None, 32, 32, 32)       0         \n",
+      " 2D)                                                             \n",
+      "                                                                 \n",
+      " dropout_1 (Dropout)         (None, 32, 32, 32)        0         \n",
+      "                                                                 \n",
+      " conv2d_2 (Conv2D)           (None, 32, 32, 64)        18496     \n",
+      "                                                                 \n",
+      " batch_normalization_2 (Batc  (None, 32, 32, 64)       256       \n",
+      " hNormalization)                                                 \n",
+      "                                                                 \n",
+      " max_pooling2d_2 (MaxPooling  (None, 16, 16, 64)       0         \n",
+      " 2D)                                                             \n",
+      "                                                                 \n",
+      " dropout_2 (Dropout)         (None, 16, 16, 64)        0         \n",
+      "                                                                 \n",
+      " conv2d_3 (Conv2D)           (None, 16, 16, 128)       73856     \n",
+      "                                                                 \n",
+      " batch_normalization_3 (Batc  (None, 16, 16, 128)      512       \n",
+      " hNormalization)                                                 \n",
+      "                                                                 \n",
+      " max_pooling2d_3 (MaxPooling  (None, 8, 8, 128)        0         \n",
+      " 2D)                                                             \n",
+      "                                                                 \n",
+      " dropout_3 (Dropout)         (None, 8, 8, 128)         0         \n",
+      "                                                                 \n",
+      " conv2d_4 (Conv2D)           (None, 8, 8, 256)         295168    \n",
+      "                                                                 \n",
+      " batch_normalization_4 (Batc  (None, 8, 8, 256)        1024      \n",
+      " hNormalization)                                                 \n",
+      "                                                                 \n",
+      " max_pooling2d_4 (MaxPooling  (None, 4, 4, 256)        0         \n",
+      " 2D)                                                             \n",
+      "                                                                 \n",
+      " dropout_4 (Dropout)         (None, 4, 4, 256)         0         \n",
+      "                                                                 \n",
+      " conv2d_5 (Conv2D)           (None, 4, 4, 512)         1180160   \n",
+      "                                                                 \n",
+      " batch_normalization_5 (Batc  (None, 4, 4, 512)        2048      \n",
+      " hNormalization)                                                 \n",
+      "                                                                 \n",
+      " max_pooling2d_5 (MaxPooling  (None, 2, 2, 512)        0         \n",
+      " 2D)                                                             \n",
+      "                                                                 \n",
+      " dropout_5 (Dropout)         (None, 2, 2, 512)         0         \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 2, 2, 512)         262656    \n",
+      "                                                                 \n",
+      " dropout_6 (Dropout)         (None, 2, 2, 512)         0         \n",
+      "                                                                 \n",
+      " flatten (Flatten)           (None, 2048)              0         \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 18)                36882     \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 1,876,338\n",
+      "Trainable params: 1,874,322\n",
+      "Non-trainable params: 2,016\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "# Define the CNN Model from Scratch\n",
     "def build_scratch_cnn_deep_hr():\n",
@@ -1685,9 +1763,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Epoch 1: LearningRateScheduler setting learning rate to 0.0010000000474974513.\n",
+      "Epoch 1/10\n",
+      "2754/2754 [==============================] - 124s 43ms/step - loss: 4.2533 - accuracy: 0.4261 - val_loss: 1.6990 - val_accuracy: 0.7214 - lr: 0.0010\n",
+      "\n",
+      "Epoch 2: LearningRateScheduler setting learning rate to 0.0009900990569281696.\n",
+      "Epoch 2/10\n",
+      "2754/2754 [==============================] - 59s 21ms/step - loss: 1.3674 - accuracy: 0.7896 - val_loss: 1.2037 - val_accuracy: 0.8406 - lr: 9.9010e-04\n",
+      "\n",
+      "Epoch 3: LearningRateScheduler setting learning rate to 0.0009706853341092082.\n",
+      "Epoch 3/10\n",
+      "2754/2754 [==============================] - 55s 20ms/step - loss: 1.1050 - accuracy: 0.8490 - val_loss: 1.1063 - val_accuracy: 0.8610 - lr: 9.7069e-04\n",
+      "\n",
+      "Epoch 4: LearningRateScheduler setting learning rate to 0.0009424129424128428.\n",
+      "Epoch 4/10\n",
+      "2754/2754 [==============================] - 54s 20ms/step - loss: 0.9612 - accuracy: 0.8784 - val_loss: 0.8669 - val_accuracy: 0.9065 - lr: 9.4241e-04\n",
+      "\n",
+      "Epoch 5: LearningRateScheduler setting learning rate to 0.0009061662869778676.\n",
+      "Epoch 5/10\n",
+      "2754/2754 [==============================] - 56s 20ms/step - loss: 0.8710 - accuracy: 0.8961 - val_loss: 0.8882 - val_accuracy: 0.9058 - lr: 9.0617e-04\n",
+      "\n",
+      "Epoch 6: LearningRateScheduler setting learning rate to 0.0008630154964824517.\n",
+      "Epoch 6/10\n",
+      "2754/2754 [==============================] - 55s 20ms/step - loss: 0.7914 - accuracy: 0.9101 - val_loss: 0.8826 - val_accuracy: 0.8862 - lr: 8.6302e-04\n",
+      "\n",
+      "Epoch 7: LearningRateScheduler setting learning rate to 0.0008141655444149982.\n",
+      "Epoch 7/10\n",
+      "2754/2754 [==============================] - 56s 21ms/step - loss: 0.7325 - accuracy: 0.9198 - val_loss: 0.7137 - val_accuracy: 0.9282 - lr: 8.1417e-04\n",
+      "\n",
+      "Epoch 8: LearningRateScheduler setting learning rate to 0.000760902402591761.\n",
+      "Epoch 8/10\n",
+      "2754/2754 [==============================] - 55s 20ms/step - loss: 0.6757 - accuracy: 0.9273 - val_loss: 0.7149 - val_accuracy: 0.9218 - lr: 7.6090e-04\n",
+      "\n",
+      "Epoch 9: LearningRateScheduler setting learning rate to 0.0007045392757626595.\n",
+      "Epoch 9/10\n",
+      "2754/2754 [==============================] - 54s 20ms/step - loss: 0.6093 - accuracy: 0.9376 - val_loss: 0.6388 - val_accuracy: 0.9358 - lr: 7.0454e-04\n",
+      "\n",
+      "Epoch 10: LearningRateScheduler setting learning rate to 0.0006463663297953135.\n",
+      "Epoch 10/10\n",
+      "2754/2754 [==============================] - 53s 19ms/step - loss: 0.5661 - accuracy: 0.9421 - val_loss: 0.6214 - val_accuracy: 0.9307 - lr: 6.4637e-04\n"
+     ]
+    }
+   ],
    "source": [
     "# Train CNN Model\n",
     "history_deep_hr = scratch_model_deep_hr.fit(\n",
@@ -1699,8 +1824,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **CNN Model: Deep High Resolution - Save**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1717,13 +1849,6 @@
     "# Save Model: .h5\n",
     "# Saves the Model Weights and Configurations\n",
     "scratch_model_deep_hr.save('h5/scratch_model_deep_hr.h5')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### **CNN Model: Deep High Resolution - Save**"
    ]
   },
   {
