--- a/cnn_Transfer_Learning_VGG16.ipynb
+++ b/cnn_Transfer_Learning_VGG16.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -141,18 +141,9 @@
      "output_type": "stream",
      "text": [
       "Found 125912 files belonging to 18 classes.\n",
-      "Using 88128 samples in the Training set\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "Using 88128 samples in the Training set\n",
+      "Using 25184 samples in the Validation set\n",
+      "Using 12600 samples in the Test set\n"
      ]
     }
    ],
@@ -200,6 +191,65 @@
     "print(f'Using {count_samples(train_ds_vgg16)} samples in the Training set')\n",
     "print(f'Using {count_samples(val_ds_vgg16)} samples in the Validation set')\n",
     "print(f'Using {count_samples(test_ds_vgg16)} samples in the Test set')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['call',\n",
+       " 'dislike',\n",
+       " 'fist',\n",
+       " 'four',\n",
+       " 'like',\n",
+       " 'mute',\n",
+       " 'ok',\n",
+       " 'one',\n",
+       " 'palm',\n",
+       " 'peace',\n",
+       " 'peace_inverted',\n",
+       " 'rock',\n",
+       " 'stop',\n",
+       " 'stop_inverted',\n",
+       " 'three',\n",
+       " 'three2',\n",
+       " 'two_up',\n",
+       " 'two_up_inverted']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get class names\n",
+    "class_names = full_ds_vgg16.class_names\n",
+    "class_names"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **Dataset: Transfer Learning VGG-16 - Save**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_to_save = 'savedDatasetTLVGG16'\n",
+    "\n",
+    "tf.data.experimental.save(train_ds_vgg16, path_to_save + '/train')\n",
+    "tf.data.experimental.save(val_ds_vgg16, path_to_save + '/val')\n",
+    "tf.data.experimental.save(test_ds_vgg16, path_to_save + '/test')"
    ]
   },
   {
